@@ -1,3 +1,10 @@
+2010-08-12  Andreas Kupries  <andreask@activestate.com>
+
+	* lib/ttrace.tcl (_serializensp, _serializeproc): Fixed typos
+	  which smashed namespace name and opening brace of a script
+	  together, leading to a syntax error for 'namespace eval' and
+	  preventing the use of package Ttrace.
+
 2010-07-25  Donal K. Fellows  <dkf@users.sf.net>
 
 	* lib/ttrace.tcl: [Bug 3033206]: Be careful with variables outside of
